Allow to reset signatures
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	},
 	"dependencies": {
 		"axios": "^0.18.0",
-		"vue": "^2.5.16"
+		"vue": "^2.5.16",
+		"vue-select": "^2.4.0"
 	},
 	"browserslist": [
 		"last 2 versions",
