--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "termsandconditions",
-	"description": "Requires users to accept the terms and conditions before accessing data.",
+	"name": "terms_of_service",
+	"description": "Requires users to accept the terms of service before accessing data.",
 	"version": "1.0.0",
 	"author": "Joas Schilling <coding@schilljs.com>",
 	"license": "agpl",
