--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
 	"presets": [
 		[
-			"env",
+			"@babel/preset-env",
 			{
 				"targets": {
-					"browsers": ["last 2 versions", "not ie <= 11"]
+					"browsers": ["last 2 versions", "ie >= 11"]
 				}
 			}
 		]
