--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
 	},
 	"browserslist": [
 		"last 2 versions",
-		"not ie <= 11"
+		"ie >= 11"
 	],
 	"devDependencies": {
-		"babel-core": "^6.26.3",
+		"@babel/core": "^7.0.0",
+		"@babel/preset-env": "^7.0.0",
 		"babel-loader": "^8.0.2",
-		"babel-preset-env": "^1.7.0",
 		"css-loader": "^1.0.0",
 		"file-loader": "^2.0.0",
 		"vue-loader": "^15.4.1",
