--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
 	},
 	"dependencies": {
 		"axios": "^0.18.0",
+		"nextcloud-vue": "^0.4.4",
 		"vue": "^2.5.17",
-		"vue-js-modal": "^1.3.25",
-		"vue-select": "^2.4.0"
+		"vue-js-modal": "^1.3.27"
 	},
 	"browserslist": [
 		"last 2 versions",
 		"ie >= 11"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.1.2",
-		"@babel/preset-env": "^7.1.0",
+		"@babel/core": "^7.1.6",
+		"@babel/preset-env": "^7.1.6",
 		"babel-loader": "^8.0.4",
 		"css-loader": "^1.0.1",
 		"file-loader": "^2.0.0",
 		"vue-loader": "^15.4.2",
 		"vue-template-compiler": "^2.5.17",
-		"webpack": "^4.25.1",
+		"webpack": "^4.26.0",
 		"webpack-cli": "^3.1.2",
 		"webpack-merge": "^4.1.4"
 	}
