--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
 	},
 	"dependencies": {
 		"axios": "^0.18.0",
-		"vue": "^2.5.17",
-		"vue-js-modal": "^1.3.27",
-		"nextcloud-vue": "^0.4.5"
+		"nextcloud-vue": "^0.4.5",
+		"vue": "^2.5.19",
+		"vue-js-modal": "^1.3.27"
 	},
 	"browserslist": [
 		"last 2 versions",
 		"ie >= 11"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.1.6",
-		"@babel/preset-env": "^7.1.6",
+		"@babel/core": "^7.2.0",
+		"@babel/preset-env": "^7.2.0",
 		"babel-loader": "^8.0.4",
-		"css-loader": "^1.0.1",
+		"css-loader": "^2.0.0",
 		"file-loader": "^2.0.0",
 		"vue-loader": "^15.4.2",
-		"vue-template-compiler": "^2.5.17",
-		"webpack": "^4.26.1",
+		"vue-template-compiler": "^2.5.19",
+		"webpack": "^4.27.1",
 		"webpack-cli": "^3.1.2",
-		"webpack-merge": "^4.1.4"
+		"webpack-merge": "^4.1.5"
 	}
 }
