--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"build": "webpack --progress --hide-modules --config webpack.prod.js"
 	},
 	"dependencies": {
-		"axios": "^0.18.0",
+		"nextcloud-axios": "^0.1.3",
 		"nextcloud-vue": "^0.5.0",
 		"vue": "^2.5.22",
 		"vue-js-modal": "^1.3.28"
