Add lint command
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "require": {
         "erusev/parsedown": "^1.6",
         "geoip2/geoip2": "~2.0"
+    },
+    "scripts": {
+        "lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;"
     }
 }
