--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 	},
 	"dependencies": {
 		"@nextcloud/axios": "^1.3.2",
+		"@nextcloud/dialogs": "^1.2.2",
+		"@nextcloud/router": "^1.0.2",
 		"@nextcloud/vue": "^1.5.0",
 		"vue": "^2.6.11",
 		"vue-js-modal": "^1.3.33"
