--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,6 @@
         "geoip2/geoip2": "~2.0"
     },
     "scripts": {
-        "lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;"
+        "lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l"
     }
 }
