--- a/package.json
+++ b/package.json
@@ -18,27 +18,27 @@
 		"@nextcloud/axios": "^1.3.3",
 		"@nextcloud/dialogs": "^1.4.0",
 		"@nextcloud/router": "^1.1.0",
-		"@nextcloud/vue": "^2.2.1",
+		"@nextcloud/vue": "^2.3.0",
 		"vue": "^2.6.11",
 		"vue-js-modal": "^1.3.35"
 	},
 	"browserslist": [
-		"last 2 versions",
-		"ie >= 11"
+		"extends @nextcloud/browserslist-config"
 	],
 	"devDependencies": {
 		"@babel/core": "^7.10.5",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@babel/preset-env": "^7.10.4",
+		"@nextcloud/browserslist-config": "^1.0.0",
 		"@nextcloud/eslint-config": "^2.1.0",
 		"@nextcloud/eslint-plugin": "^1.4.0",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.1.0",
 		"css-loader": "^3.6.0",
 		"eslint": "^6.8.0",
-		"eslint-config-standard": "^12.0.0",
+		"eslint-config-standard": "^14.1.1",
 		"eslint-import-resolver-webpack": "^0.12.2",
-		"eslint-loader": "^3.0.4",
+		"eslint-loader": "^4.0.2",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
