Use @nextcloud/webpack-vue-config and update other templating files
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 	"license": "agpl",
 	"private": true,
 	"scripts": {
-		"dev": "NODE_ENV=development webpack --config webpack.dev.js",
-		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
-		"build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.prod.js",
+		"build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.js",
+		"dev": "NODE_ENV=development webpack --config webpack.js",
+		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
 		"lint": "eslint --ext .js,.vue src",
 		"lint:fix": "eslint --ext .js,.vue src --fix",
 		"stylelint": "stylelint **/*.css **/*.scss **/*.vue",
@@ -32,6 +32,7 @@
 		"@nextcloud/browserslist-config": "^1.0.0",
 		"@nextcloud/eslint-config": "^2.1.0",
 		"@nextcloud/eslint-plugin": "^1.4.0",
+		"@nextcloud/webpack-vue-config": "^1.1.0",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.1.0",
 		"css-loader": "^3.6.0",
