--- a/package.json
+++ b/package.json
@@ -6,54 +6,55 @@
 	"license": "agpl",
 	"private": true,
 	"scripts": {
-		"dev": "NODE_ENV=development webpack --config webpack.dev.js",
-		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
-		"build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.prod.js",
+		"build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.js",
+		"dev": "NODE_ENV=development webpack --config webpack.js",
+		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
 		"lint": "eslint --ext .js,.vue src",
 		"lint:fix": "eslint --ext .js,.vue src --fix",
 		"stylelint": "stylelint **/*.css **/*.scss **/*.vue",
 		"stylelint:fix": "stylelint **/*.css **/*.scss **/*.vue --fix"
 	},
 	"dependencies": {
-		"@nextcloud/axios": "^1.3.2",
-		"@nextcloud/dialogs": "^1.3.1",
-		"@nextcloud/router": "^1.0.2",
-		"@nextcloud/vue": "^2.0.0",
+		"@nextcloud/axios": "^1.3.3",
+		"@nextcloud/dialogs": "^1.4.0",
+		"@nextcloud/router": "^1.1.0",
+		"@nextcloud/vue": "^2.3.0",
 		"vue": "^2.6.11",
 		"vue-js-modal": "^1.3.35"
 	},
 	"browserslist": [
-		"last 2 versions",
-		"ie >= 11"
+		"extends @nextcloud/browserslist-config"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.10.2",
+		"@babel/core": "^7.10.5",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/preset-env": "^7.10.2",
-		"@nextcloud/eslint-config": "^2.0.0",
+		"@babel/preset-env": "^7.10.4",
+		"@nextcloud/browserslist-config": "^1.0.0",
+		"@nextcloud/eslint-config": "^2.1.0",
 		"@nextcloud/eslint-plugin": "^1.4.0",
+		"@nextcloud/webpack-vue-config": "^1.1.0",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.1.0",
-		"css-loader": "^3.5.3",
+		"css-loader": "^3.6.0",
 		"eslint": "^6.8.0",
-		"eslint-config-standard": "^12.0.0",
-		"eslint-import-resolver-webpack": "^0.12.1",
-		"eslint-loader": "^3.0.4",
-		"eslint-plugin-import": "^2.20.2",
+		"eslint-config-standard": "^14.1.1",
+		"eslint-import-resolver-webpack": "^0.12.2",
+		"eslint-loader": "^4.0.2",
+		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^6.2.2",
 		"file-loader": "^6.0.0",
-		"stylelint": "^13.5.0",
+		"stylelint": "^13.6.1",
 		"stylelint-config-recommended-scss": "^4.2.0",
-		"stylelint-scss": "^3.17.2",
-		"stylelint-webpack-plugin": "^2.0.0",
-		"vue-loader": "^15.9.2",
+		"stylelint-scss": "^3.18.0",
+		"stylelint-webpack-plugin": "^2.1.0",
+		"vue-loader": "^15.9.3",
 		"vue-template-compiler": "^2.6.11",
-		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.11",
-		"webpack-merge": "^4.2.2",
-		"webpack-node-externals": "^1.7.2"
+		"webpack": "^4.44.0",
+		"webpack-cli": "^3.3.12",
+		"webpack-merge": "^5.0.9",
+		"webpack-node-externals": "^2.5.0"
 	}
 }
