--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"@nextcloud/webpack-vue-config": "^1.3.0",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.1.0",
-		"css-loader": "^3.6.0",
+		"css-loader": "^4.2.2",
 		"eslint": "^6.8.0",
 		"eslint-config-standard": "^14.1.1",
 		"eslint-import-resolver-webpack": "^0.12.2",
@@ -46,11 +46,14 @@
 		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^6.2.2",
 		"file-loader": "^6.0.0",
+		"node-sass": "^4.14.1",
+		"sass-loader": "^8.0.2",
 		"style-loader": "^1.2.1",
 		"stylelint": "^13.6.1",
 		"stylelint-config-recommended-scss": "^4.2.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
+		"url-loader": "^4.1.0",
 		"vue-loader": "^15.9.3",
 		"vue-template-compiler": "^2.6.12",
 		"webpack": "^4.44.1",
