--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,18 +31,17 @@ jobs:
   node:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x]
-
-    name: eslint node${{ matrix.node-version }}
+    name: eslint node
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up node ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Set up node
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14
+
+      - name: Set up npm7
+        run: npm i -g npm@7
 
       - name: Install dependencies
         run: npm ci
@@ -53,18 +52,17 @@ jobs:
   stylelint:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x]
-
-    name: stylelint node${{ matrix.node-version }}
+    name: stylelint node
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up node ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Set up node
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14
+
+      - name: Set up npm7
+        run: npm i -g npm@7
 
       - name: Install dependencies
         run: npm ci
