--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 		"@nextcloud/dialogs": "^3.1.2",
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^3.10.1",
-		"vue": "^2.6.14",
-		"vue-js-modal": "^1.3.35"
+		"vue": "^2.6.14"
 	},
 	"browserslist": [
 		"extends @nextcloud/browserslist-config"
