--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
 		"@nextcloud/axios": "^2.0.0",
 		"@nextcloud/dialogs": "^3.2.0",
 		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^5.4.0",
-		"vue": "^2.7.10"
+		"@nextcloud/vue": "^7.0.0-beta.4",
+		"vue": "^2.7.10",
+		"vue-material-design-icons": "^5.1.2"
 	},
 	"browserslist": [
 		"extends @nextcloud/browserslist-config"
