--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^7.0.1",
 		"vue": "^2.7.13",
+		"vue-frag": "^1.4.1",
 		"vue-material-design-icons": "^5.1.2"
 	},
 	"browserslist": [
