chore(CI): Update master php testing versions and workflow templates
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+    "config": {
+        "classmap-authoritative": true,
+        "optimize-autoloader": true,
+        "platform": {
+            "php": "8.0"
+        },
+        "sort-packages": true
+    },
     "require": {
         "erusev/parsedown": "^1.6",
         "geoip2/geoip2": "~2.0"
