--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,16 +1,5 @@
 version: 2
 updates:
-  - package-ecosystem: npm
-    directory: "/"
-    schedule:
-      interval: weekly
-      day: saturday
-      time: "03:00"
-      timezone: Europe/Paris
-    open-pull-requests-limit: 10
-    labels:
-      - 3. to review
-      - dependencies
   - package-ecosystem: composer
     directory: "/"
     schedule:
@@ -19,6 +8,43 @@ updates:
       time: "03:00"
       timezone: Europe/Paris
     open-pull-requests-limit: 10
-    labels:
-      - 3. to review
-      - dependencies
+  - package-ecosystem: composer
+    directory: "/vendor-bin/csfixer"
+    schedule:
+      interval: weekly
+      day: saturday
+      time: "03:00"
+      timezone: Europe/Paris
+    open-pull-requests-limit: 10
+  - package-ecosystem: composer
+    directory: "/vendor-bin/mozart"
+    schedule:
+      interval: weekly
+      day: saturday
+      time: "03:00"
+      timezone: Europe/Paris
+    open-pull-requests-limit: 10
+  - package-ecosystem: composer
+    directory: "/vendor-bin/phpunit"
+    schedule:
+      interval: weekly
+      day: saturday
+      time: "03:00"
+      timezone: Europe/Paris
+    open-pull-requests-limit: 10
+  - package-ecosystem: composer
+    directory: "/vendor-bin/psalm"
+    schedule:
+      interval: weekly
+      day: saturday
+      time: "03:00"
+      timezone: Europe/Paris
+    open-pull-requests-limit: 10
+  - package-ecosystem: npm
+    directory: "/"
+    schedule:
+      interval: weekly
+      day: saturday
+      time: "03:00"
+      timezone: Europe/Paris
+    open-pull-requests-limit: 10
