--- a/.github/workflows/phpunit-sqlite.yml
+++ b/.github/workflows/phpunit-sqlite.yml
@@ -38,8 +38,11 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1']
+        php-versions: ['8.0', '8.1', '8.2']
         server-versions: ['master']
+        include:
+          - php-versions: '7.4'
+            server-versions: 'stable25'
 
     steps:
       - name: Set app env
