--- a/.github/workflows/phpunit-sqlite.yml
+++ b/.github/workflows/phpunit-sqlite.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
       matrix:
         php-versions: ['8.0', '8.1', '8.2']
-        server-versions: ['master', 'stable26']
+        server-versions: ['master', 'stable27', 'stable26']
         include:
           - php-versions: '7.4'
             server-versions: 'stable25'
