--- a/.github/workflows/phpunit-sqlite.yml
+++ b/.github/workflows/phpunit-sqlite.yml
@@ -47,8 +47,8 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.2']
-        server-versions: ['master']
+        php-versions: ['8.0', '8.1', '8.2', '8.3']
+        server-versions: ['master', 'stable28']
 
     steps:
       - name: Set app env
