--- a/.github/workflows/phpunit-sqlite.yml
+++ b/.github/workflows/phpunit-sqlite.yml
@@ -38,11 +38,11 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1', '8.2']
-        server-versions: ['master', 'stable27', 'stable26']
+        php-versions: ['8.1', '8.2']
+        server-versions: ['stable28', 'stable27', 'stable26']
         include:
-          - php-versions: '7.4'
-            server-versions: 'stable25'
+          - php-versions: '8.3'
+            server-versions: 'stable28'
 
     steps:
       - name: Set app env
