--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "terms_of_service",
 	"description": "Requires users to accept the terms of service before accessing data.",
-	"version": "2.5.0",
+	"version": "3.0.0-dev.0",
 	"author": "Joas Schilling <coding@schilljs.com>",
 	"license": "agpl",
 	"private": true,
