--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,17 @@
 {
+	"autoload": {
+		"psr-4": {
+			"OCA\\TermsOfService\\": "lib/"
+		}
+	},
 	"config": {
-		"classmap-authoritative": true,
+		"allow-plugins": {
+			"bamarni/composer-bin-plugin": true
+		},
+		"autoloader-suffix": "TermsOfService",
 		"optimize-autoloader": true,
 		"platform": {
-			"php": "8.0"
+			"php": "8.0.2"
 		},
 		"sort-packages": true
 	},
@@ -12,11 +20,22 @@
 		"geoip2/geoip2": "~2.0"
 	},
 	"require-dev": {
+		"bamarni/composer-bin-plugin": "^1.8",
 		"phpunit/phpunit": "^9.5",
 		"roave/security-advisories": "dev-latest"
 	},
 	"scripts": {
+		"bin": "echo 'bin not installed'",
 		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
+		"post-install-cmd": [
+			"@composer bin all install --ansi",
+			"composer dump-autoload"
+		],
+		"post-update-cmd": [
+			"@composer bin all update --ansi",
+			"composer dump-autoload"
+		],
+		"psalm": "psalm --no-cache --threads=$(nproc)",
 		"test:unit": "vendor/bin/phpunit --color -c tests/phpunit.xml"
 	}
 }
