--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
 	"scripts": {
 		"bin": "echo 'bin not installed'",
 		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
+		"openapi": "generate-spec --verbose",
 		"post-install-cmd": [
 			"@composer bin all install --ansi",
 			"composer dump-autoload"
