ci: Check only the diff for openapi for now
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/.github/workflows/openapi.yml
+++ b/.github/workflows/openapi.yml
@@ -84,11 +84,11 @@ jobs:
 
       - name: Check openapi*.json and typescript changes
         run: |
-          bash -c "[[ ! \"`git status --porcelain `\" ]] || (echo 'Please run \"composer run openapi\" and commit the openapi*.json files and (if applicable) src/types/openapi/openapi*.ts, see the section \"Show changes on failure\" for details' && exit 1)"
+          bash -c "[[ ! \"`git status --porcelain openapi* `\" ]] || (echo 'Please run \"composer run openapi\" and commit the openapi*.json files and (if applicable) src/types/openapi/openapi*.ts, see the section \"Show changes on failure\" for details' && exit 1)"
 
       - name: Show changes on failure
         if: failure()
         run: |
           git status
-          git --no-pager diff
+          git --no-pager diff openapi*
           exit 1 # make it red to grab attention
