--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"stylelint:fix": "stylelint **/*.css **/*.scss **/*.vue --fix"
 	},
 	"dependencies": {
+		"@nextcloud/auth": "^2.4.0",
 		"@nextcloud/axios": "^2.5.1",
 		"@nextcloud/dialogs": "^5.3.7",
 		"@nextcloud/router": "^3.0.1",
