--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"stylelint:fix": "stylelint **/*.css **/*.scss **/*.vue --fix"
 	},
 	"dependencies": {
+		"@nextcloud/auth": "^2.4.0",
 		"@nextcloud/axios": "^2.3.0",
 		"@nextcloud/dialogs": "^4.2.0",
 		"@nextcloud/router": "^2.1.1",
