--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
 	"license": "AGPL-3.0-or-later",
 	"private": true,
 	"scripts": {
-		"build": "NODE_ENV=production webpack --progress --config webpack.js",
-		"dev": "NODE_ENV=development webpack --config webpack.js",
-		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
-		"lint": "eslint --ext .js,.vue src",
-		"lint:fix": "eslint --ext .js,.vue src --fix",
-		"stylelint": "stylelint **/*.css **/*.scss **/*.vue",
-		"stylelint:fix": "stylelint **/*.css **/*.scss **/*.vue --fix"
+		"build": "vite --mode production build",
+		"dev": "export NODE_ENV=development; vite --mode development build",
+		"watch": "export NODE_ENV=development; vite --mode development build --watch",
+		"lint": "eslint src",
+		"lint:fix": "eslint src --fix",
+		"stylelint": "stylelint src",
+		"stylelint:fix": "stylelint src --fix"
 	},
+	"type": "module",
 	"dependencies": {
 		"@nextcloud/auth": "^2.4.0",
 		"@nextcloud/axios": "^2.5.1",
-		"@nextcloud/dialogs": "^5.3.7",
+		"@nextcloud/dialogs": "^7.1.0",
+		"@nextcloud/logger": "^3.0.2",
 		"@nextcloud/router": "^3.0.1",
-		"@nextcloud/vue": "^8.27.0",
-		"vue": "^2.7.16",
-		"vue-frag": "^1.4.3",
+		"@nextcloud/vue": "^9.0.0",
+		"vue": "^3.5.18",
 		"vue-material-design-icons": "^5.3.1"
 	},
 	"browserslist": [
@@ -32,11 +33,16 @@
 		"npm": "^10.0.0"
 	},
 	"devDependencies": {
-		"@nextcloud/babel-config": "^1.2.0",
 		"@nextcloud/browserslist-config": "^3.0.1",
-		"@nextcloud/eslint-config": "^8.4.2",
+		"@nextcloud/eslint-config": "^9.0.0-rc.5",
 		"@nextcloud/stylelint-config": "^3.1.0",
-		"@nextcloud/webpack-vue-config": "^6.3.0",
-		"vue-template-compiler": "^2.7.16"
+		"@nextcloud/vite-config": "^2.4.0",
+		"@types/dockerode": "^3.3.44",
+		"@vue/compiler-sfc": "^3.5.22",
+		"@vue/tsconfig": "^0.8.1",
+		"ts-node": "^10.9.2",
+		"tslib": "^2.8.1",
+		"typescript": "^5.9.2",
+		"vite": "^7.1.7"
 	}
 }
