Run rector with PHP 8.2
Signed-off-by: Carl Schwan <carl.schwan@nextcloud.com>

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
 	"autoload": {
+		"exclude-from-classmap": [
+			"**/bamarni/composer-bin-plugin/**"
+		],
 		"psr-4": {
 			"OCA\\TermsOfService\\": "lib/"
 		}
