--- a/vendor-bin/rector/composer.json
+++ b/vendor-bin/rector/composer.json
@@ -1,5 +1,10 @@
 {
     "require-dev": {
         "rector/rector": "^2.0"
-    }
+    },
+	"config": {
+		"platform": {
+			"php": "8.1"
+		}
+	}
 }
